--- a/index.html
+++ b/index.html
@@ -1028,6 +1028,7 @@
 
       				// Check if the credentials are correct
      				if (email === 'guduribhargava@gmail.com' && password === 'Bhargava143@') {
+					window.location.href = 'signed-page.html';
         				// Redirect to the desired page or perform any other action
         				alert('Sign-in successful!');
       				}
