--- a/index.html
+++ b/index.html
@@ -991,9 +991,9 @@
 	<!-- //contact -->
 	<!-- // Signin -->
 		<div class="floating-card" id="Signin">
-		<h3 class="signin-block">Sign-in for our beautiful webiste for juse $20
+		<h3 class="signin-block">Sign-in requried for just $20
 		</h3>
-		<div class=".content">
+		<div class="content">
 			<style>
 			    	.content {
      				 	flex: 1;
@@ -1039,6 +1039,7 @@
       				    }
    			 	}
   			</script>
+			<div class="signin-block" >
 			<form>
     				<label for="email">Email:</label>
     				<input type="email" id="email" name="email" required>
@@ -1050,6 +1051,7 @@
 			<div class="register-card">
     				<p>Don't have an account? <a href="register.html">Register here</a></p>
  			</div>
+		</div>
 			<p id="warning" style="display: none; color: red;">Incorrect email or password. Please try again.</p>
   		     </form>
 		</div>
