--- a/index.html
+++ b/index.html
@@ -532,7 +532,9 @@
 						</div>
 					</div>
 				</div>
-
+				<div>
+					<a href="moremusic.py">More Musics....</a>
+				</div>
 			</div>
 
 		</div>
