--- a/playlist.html
+++ b/playlist.html
@@ -1,19 +1,24 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" ng-app="myApp">
 <head>
-    <title>Music Playlist</title>
+  <meta charset="UTF-8">
+  <title>Music Playlist</title>
+  <!-- Include AngularJS -->
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.9/angular.min.js"></script>
 </head>
-<body>
-    <h1>Music Playlist</h1>
-    <ul>
-        {% for url in music_files %}
-        <li>
-            <audio controls>
-                <source src="{{ url }}" type="audio/mpeg">
-                Your browser does not support the audio element.
-            </audio>
-        </li>
-        {% endfor %}
-    </ul>
+<body ng-controller="MusicController">
+
+  <!-- Music Playlist -->
+  <div ng-repeat="song in playlist">
+    <h3>{{ song.title }}</h3>
+    <p>{{ song.artist }}</p>
+    <button ng-click="playSong(song)">Play</button>
+  </div>
+
+  <!-- Include Azure Storage JavaScript SDK -->
+  <script src="https://cdn.jsdelivr.net/npm/@azure/storage-blob@12.10.0/dist/azure-storage-blob.js"></script>
+
+  <!-- Include your AngularJS app.js file -->
+  <script src="app.js"></script>
 </body>
 </html>
