--- a/index.html
+++ b/index.html
@@ -89,11 +89,8 @@
 								<li>
 									<a href="#team" class="scroll">Artists</a>
 								</li>
-								 <li>
-									<a href="#Signin" class="scroll">Sign-in</a>
-								</li>
 								<li>
-									<a href="moremusic.py">More Musics....</a>
+									<a href="playlist.html">More Musics....</a>
 								</li>
 							</ul>
 						</li>
