--- a/index.html
+++ b/index.html
@@ -89,9 +89,6 @@
 								<li>
 									<a href="#team" class="scroll">Artists</a>
 								</li>
-								<li>
-									<a href="playlist.html">More Musics....</a>
-								</li>
 							</ul>
 						</li>
 						<li>
@@ -530,6 +527,8 @@
 						<div id="plwrap">
 							<ul id="plList"></ul>
 						</div>
+						<div>
+							<a href="playlist.html"> Play more....</a>
 					</div>
 				</div>
 			</div>
