--- a/playlist.html
+++ b/playlist.html
@@ -19,6 +19,6 @@
   <script src="https://cdn.jsdelivr.net/npm/@azure/storage-blob@12.10.0/dist/azure-storage-blob.js"></script>
 
   <!-- Include your AngularJS app.js file -->
-  <script src="app.js"></script>
+  <script src="azure_storage_list.py"></script>
 </body>
 </html>
