--- a/index.html
+++ b/index.html
@@ -528,7 +528,7 @@
 							<ul id="plList"></ul>
 						</div>
 						<div>
-							<a href="app.js"> Play more....</a>
+							<a href="playlist.html"> Play more....</a>
 					</div>
 				</div>
 			</div>
