--- a/playlist.html
+++ b/playlist.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="myApp">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <title>Music Playlist</title>
-  <!-- Include AngularJS -->
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.9/angular.min.js"></script>
 </head>
 <body ng-controller="MusicController">
 
@@ -17,8 +15,6 @@
 
   <!-- Include Azure Storage JavaScript SDK -->
   <script src="https://cdn.jsdelivr.net/npm/@azure/storage-blob@12.10.0/dist/azure-storage-blob.js"></script>
-
-  <!-- Include your AngularJS app.js file -->
   <script src="azure_storage_list.py"></script>
 </body>
 </html>
