--- a/playlist.html
+++ b/playlist.html
@@ -1,20 +1,36 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <title>Music Playlist</title>
+    <title>Azure Storage Music Playlist</title>
 </head>
-<body ng-controller="MusicController">
+<body>
+    <h1>Music Playlist</h1>
+    <ul id="playlist">
+        <!-- The playlist will be generated dynamically by JavaScript -->
+    </ul>
 
-  <!-- Music Playlist -->
-  <div ng-repeat="song in playlist">
-    <h3>{{ song.title }}</h3>
-    <p>{{ song.artist }}</p>
-    <button ng-click="playSong(song)">Play</button>
-  </div>
+    <script>
+        // Fetch the content of azure_storage_content.md using Fetch API
+        fetch('azure_storage_content.md')
+            .then(response => response.text())
+            .then(text => {
+                // Split the text into lines to extract individual file names
+                const fileLines = text.split('\n');
 
-  <!-- Include Azure Storage JavaScript SDK -->
-  <script src="https://cdn.jsdelivr.net/npm/@azure/storage-blob@12.10.0/dist/azure-storage-blob.js"></script>
-  <script src="azure_storage_list.py"></script>
+                // Get the playlist element
+                const playlist = document.getElementById('playlist');
+
+                // Loop through the file lines and add each file as a list item to the playlist
+                fileLines.forEach(file => {
+                    if (file) { // Ensure the line is not empty
+                        const listItem = document.createElement('li');
+                        listItem.textContent = file.substring(2); // Remove the '- ' prefix
+                        playlist.appendChild(listItem);
+                    }
+                });
+            })
+            .catch(error => console.error('Error fetching the playlist:', error));
+    </script>
 </body>
 </html>
+
