--- a/playlist.html
+++ b/playlist.html
@@ -21,7 +21,7 @@
             audioPlayer.play();
         }
         // Fetch the content of azure_storage_content.md using Fetch API
-        fetch('azure_storage_content.md')
+        fetch('azure_storage_content.py')
             .then(response => response.text())
             .then(text => {
                 // Split the text into lines to extract individual file names
