--- a/playlist.html
+++ b/playlist.html
@@ -4,8 +4,39 @@
     <title>My Music Playlist</title>
 </head>
 <body>
-    <h1>My Music Playlist</h1>
+    
     <div id="playlist"></div>
+
+    <div class="works" id="album">
+		<div class="container">
+			<h3 class="tittle_w3ls cen">Latest Albums</h3>
+			<div class="inner_sec_info_agile-w3ls">
+				<div class="column add-bottom">
+					<div id="mainwrap">
+						<div id="nowPlay">
+							<span class="left" id="npAction">Paused...</span>
+							<span class="right" id="npTitle"></span>
+						</div>
+						<div id="audiowrap">
+							<div id="audio0">
+								<audio preload id="audio1" controls="controls">Your browser does not support HTML5 Audio!</audio>
+							</div>
+							<div id="tracks">
+								<a id="btnPrev">&larr;</a>
+								<a id="btnNext">&rarr;</a>
+							</div>
+						</div>
+						<div id="plwrap">
+							<ul id="plList"></ul>
+						</div>
+						<div>
+							<a href="playlist.html"> Play more....</a>
+					</div>
+				</div>
+			</div>
+
+		</div>
+	</div>
 
     <!-- Include the Azure Blob Storage JavaScript SDK -->
     <script src="https://js.dev.azure.com/azure-sdk/jslib/azure-storage-blob/12.10.0/dist/azure-storage-blob.js"></script>
