--- a/playlist.html
+++ b/playlist.html
@@ -1,10 +1,186 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <title>My Music Playlist</title>
+    <head>
+	<title>Zozo music an Entertainment Category website listen the music now..!</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta charset="utf-8">
+	<script>
+		addEventListener("load", function () {
+			setTimeout(hideURLbar, 0);
+		}, false);
+
+		function hideURLbar() {
+			window.scrollTo(0, 1);
+		}
+	</script>
+	<!-- Custom Theme files -->
+	<link href="css/bootstrap.css" type="text/css" rel="stylesheet" media="all">
+	<link href="css/style.css" type="text/css" rel="stylesheet" media="all">
+	<link href="css/fontawesome-all.css" rel="stylesheet">
+
+	<!-- font-awesome icons -->
+	<!-- //Custom Theme files -->
+	<!-- web-fonts -->
+
+	<link href="//fonts.googleapis.com/css?family=Molengo" rel="stylesheet">
+	<link href="//fonts.googleapis.com/css?family=Arimo:400,400i,700,700i" rel="stylesheet">
+	<!-- //web-fonts -->
 </head>
-<body>
-    
+
+
+<body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
+	<div id="home">
+		<!-- header -->
+		<!-- Navigation -->
+		<nav class="navbar navbar-default navbar-fixed-top">
+			<div class="main-nav-agile-w3layouts">
+				<div class="search">
+					<form action="#" method="post">
+						<input class="serch" type="search" name="serch" placeholder="Search here..." required="">
+						<button class="btn1">
+							<i class="fas fa-search"></i>
+						</button>
+						<div class="clearfix"> </div>
+					</form>
+				</div>
+				<div class="navbar-header page-scroll">
+					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+						<span class="sr-only">Chronicle</span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</button>
+					<div class="logo">
+						<h1>
+							<a class="navbar-brand" href="index.html">
+								<i class="fas fa-headphones"></i>Zozo Music</a>
+						</h1>
+					</div>
+				</div>
+
+				<!-- Collect the nav links, forms, and other content for toggling -->
+				<div class="collapse navbar-collapse navbar-ex1-collapse nav-right">
+					<ul class="nav navbar-nav navbar-right cl-effect-15">
+						<!-- Hidden li included to remove active class from about link when scrolled up past about section -->
+						<li class="hidden">
+							<a class="page-scroll" href="#page-top"></a>
+						</li>
+						<li>
+							<a class="page-scroll" href="#home">Home</a>
+						</li>
+						<li>
+							<a class="page-scroll" href="#about">about</a>
+						</li>
+						<li class="dropdown">
+							<a href="#" class="dropdown-toggle effect-3" data-toggle="dropdown">Drop Down
+								<b class="caret"></b>
+							</a>
+							<ul class="dropdown-menu">
+								<li>
+									<a href="#gallery" class="scroll">Gallery</a>
+								</li>
+								<li>
+									<a href="#album" class="scroll">Albums</a>
+								</li>
+								<li>
+									<a href="#coming" class="scroll">Coming soon</a>
+								</li>
+								<li>
+									<a href="#team" class="scroll">Artists</a>
+								</li>
+							</ul>
+						</li>
+						<li>
+							<a class="page-scroll" href="#testimonials">reviews</a>
+						</li>
+						<li>
+							<a class="page-scroll" href="#contact">Contact</a>
+						</li>
+						<li>
+							<a class="page-scroll" href="https://bhargava-design.github.io/Zozo-Muisc-Creation-Project/Zozo%20Bot.html">Zozo Bot</a>
+						</li>
+
+					</ul>
+
+				</div>
+
+				<!-- /.navbar-collapse -->
+
+				<div class="clearfix"></div>
+			</div>
+			<!-- /.container -->
+		</nav>
+	</div>
+	<!-- banner -->
+	<div class="banner_top_wthree_agileinfo">
+		<div id="myCarousel" class="carousel slide" data-ride="carousel">
+			<!-- Indicators -->
+			<ol class="carousel-indicators">
+				<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+				<li data-target="#myCarousel" data-slide-to="1" class=""></li>
+				<li data-target="#myCarousel" data-slide-to="2" class=""></li>
+				<li data-target="#myCarousel" data-slide-to="3" class=""></li>
+			</ol>
+			<div class="carousel-inner" role="listbox">
+				<div class="item active">
+					<div class="container">
+						<div class="carousel-caption">
+							<h3>Music is the shorthand of emotion.</h3>
+
+							<div class="bnr-button">
+								<a class="act" href="single.html">Read More</a>
+							</div>
+
+						</div>
+					</div>
+				</div>
+				<div class="item item2">
+					<div class="container">
+						<div class="carousel-caption">
+							<h3>Touch the heaven by frequency.</h3>
+
+							<div class="bnr-button">
+								<a class="act" href="single.html">Read More</a>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="item item3">
+					<div class="container">
+						<div class="carousel-caption">
+							<h3>Music is the shorthand of emotion.</h3>
+
+							<div class="bnr-button">
+								<a class="act" href="single.html">Read More</a>
+							</div>
+
+						</div>
+					</div>
+				</div>
+				<div class="item item4">
+					<div class="container">
+						<div class="carousel-caption">
+
+							<h3>Touch the heaven by frequency.</h3>
+
+							<div class="bnr-button">
+								<a class="act" href="single.html">Read More</a>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+				<span class="fa fa-chevron-left" aria-hidden="true"></span>
+				<span class="sr-only">Previous</span>
+			</a>
+			<a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+				<span class="fa fa-chevron-right" aria-hidden="true"></span>
+				<span class="sr-only">Next</span>
+			</a>
+			<!-- The Modal -->
+		</div>
+	</div>
     <div id="playlist"></div>
 
     <div class="works" id="album">
@@ -29,9 +205,6 @@
 						<div id="plwrap">
 							<ul id="plList"></ul>
 						</div>
-						<div>
-							<a href="playlist.html"> Play more....</a>
-					</div>
 				</div>
 			</div>
 
@@ -42,7 +215,7 @@
     <script src="https://js.dev.azure.com/azure-sdk/jslib/azure-storage-blob/12.10.0/dist/azure-storage-blob.js"></script>
     <script>
         // Your connection string and container name
-        const connectionString = "DefaultEndpointsProtocol=https;AccountName=musicsblock;AccountKey=jAQWo4ZwwDfbaALlbGWKoHVWmG1pPkMiefyQBLUO7BKBDvzJ4jWDRU3+S0Kf1900q4v7kI/Vph6f+AStcD+WVw==;EndpointSuffix=core.windows.net";
+        const connectionString = "DefaultEndpointsProtocol=https;AccountName=mymusic;AccountKey=LZf5ncDA7fVqTw6fM6/DAT3CrjGlZqA+kIkbMLMLDV5rTZ9WELtuOtBmNhq+hsM7KMME6/9BPxVI+AStIAqcyA==;EndpointSuffix=core.windows.net";
         const containerName = "englishmusic";
 
         // Create a new BlobServiceClient using the connection string
