--- a/playlist.html
+++ b/playlist.html
@@ -247,7 +247,7 @@
         }
 
         // Call the function to display the music playlist when the page loads
-        window.addEventListener("load", displayPlaylist);
+        window.addEventListener("load", displayPlaylist());
 
         // Function to access and play the music when the link is clicked
         function playMusic(url) {
